Update: Remove marketing content from index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <title>(W) Super Mario Bros. [!] | 支持手柄+存档-海拥游戏大全</title>
-  <meta name="description" content="海拥游戏大全，提供最新、最热门的在线游戏。涵盖动作、棋牌、益智、策略、3D、休闲、射击、红白机、经典、赛车、闯关等多种类型，所有游戏均可免费畅玩，满足你的游戏需求！">
-  <meta name="keywords"
-    content="游戏, 游戏大全, 游戏推荐, 动作游戏, 冒险游戏, 角色扮演游戏, 策略游戏, 摸鱼游戏, 网页游戏, 在线游戏, 免费游戏, 海拥游戏, 小游戏, 休闲游戏, 多人游戏, 单机游戏">
+  <title>Super Mario Bros.</title>
+  <meta name="description" content="Play Super Mario Bros. online">
+  <meta name="keywords" content="Super Mario Bros, Mario, Nintendo">
   <meta name=viewport content="width = device-width, initial-scale = 1">
   <link rel="stylesheet" type="text/css" href="css/basesetting.css">
   <script src="js/basesetting.js"></script>
